--- a/app/src/main/res/layout/book_item_layout.xml
+++ b/app/src/main/res/layout/book_item_layout.xml
@@ -31,6 +31,7 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/app_name"
                 android:scaleType="fitXY"
+                android:src="@drawable/ic_notfound"
                 app:imageUrl="@{datamodel.url}" />
 <!--            app:imageUrl="@{datamodel.url}"-->
         </com.google.android.material.card.MaterialCardView>
