--- a/app/src/main/res/layout/progress_dialog.xml
+++ b/app/src/main/res/layout/progress_dialog.xml
@@ -8,10 +8,21 @@
     app:cardCornerRadius="10dp">
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="16dp">
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/progress_circular"
             android:layout_centerInParent="true" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="@string/please_wait"
+            android:gravity="center"
+            android:padding="4dp"
+            android:textColor="@color/white"
+            android:layout_below="@+id/progress_circular"/>
     </RelativeLayout>
 </com.google.android.material.card.MaterialCardView>
