--- a/app/src/main/res/layout/book_item_layout.xml
+++ b/app/src/main/res/layout/book_item_layout.xml
@@ -13,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/root_layout"
         android:layout_marginBottom="4dp">
 
         <com.google.android.material.card.MaterialCardView
